--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "classnames": "^2.2.5",
+    "compression-webpack-plugin": "^1.0.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "fastclick": "^1.0.6",
     "history": "^4.6.1",
+    "joi-browser": "^10.6.1",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-mdl": "^1.9.0",
+    "react-modal": "^2.2.2",
     "react-redux": "^5.0.3",
+    "react-stepzilla": "^4.6.2",
     "redux": "^3.6.0",
+    "webpack-closure-compiler": "^2.1.5",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
@@ -44,6 +52,8 @@
     "firebase-tools": "^3.5.0",
     "front-matter": "^2.1.2",
     "highlight.js": "^9.10.0",
+    "joi": "^10.2.2",
+    "joi-validation-strategy": "^0.3.3",
     "json-loader": "^0.5.4",
     "markdown-it": "^8.3.1",
     "mocha": "^3.2.0",
@@ -63,7 +73,9 @@
     "postcss-nesting": "^2.3.1",
     "postcss-selector-matches": "^2.0.5",
     "postcss-selector-not": "^2.0.0",
+    "prop-types": "^15.5.8",
     "react-hot-loader": "^3.0.0-beta.2",
+    "react-validation-mixin": "^5.4.0",
     "rimraf": "^2.6.1",
     "s3": "^4.4.0",
     "style-loader": "^0.14.1",
